Agrega pasos para abrir datos

--- a/_plays/01.md
+++ b/_plays/01.md
@@ -1,25 +1,22 @@
 ---
 id: 1
-title: Understand what people need
+title: Forma un equipo de trabajo
 ---
 
-We must begin digital projects by exploring and pinpointing the needs of the people who will use the service, and the ways in which the service will fit into their lives. Whether the users are members of the public or government employees, policy makers must include real people in their design process from the very beginning. The needs of people — not constraints of government structures or silos — should drive technical and design decisions. We need to continually test the products we build with real people to keep us honest about what is important.
+Debemos comenzar designando dos figuras de vital importancia para la
+iniciativa de datos abiertos por institución; el enlace y administrador de datos
+abiertos.
+
+El Enlace coordinará las acciones de datos abiertos y encausará su uso como herramienta para cumplir objetivos de la institución.
+
+El Administrador coordinará la creación del Inventario de Datos e implementará los procesos tecnológicos para que los datos de la institución se vean reflejados en datos.gob.mx
+
+En la etapa inicial de implementación, se recomienda tener sesiones semanales para dialogar, acordar y coordinar las acciones para el cumplimiento del Decreto de Datos Abiertos y esta Guía de Implementación. Se recomienda que el grupo incluya al Titular de la Unidad de Transparencia, OICs y a las áreas responsables de administrar o generar datos.
 
 #### checklist
-1. Early in the project, spend time with current and prospective users of the service
-2. Use a range of qualitative and quantitative user research methods to determine people’s goals, needs, and behaviors; be thoughtful about the time spent
-3. Test prototypes of possible solutions with real people, in the field if possible
-4. Document the findings about user goals, needs, behaviors, and preferences
-5. Share findings with the team and agency leadership
-6. Create a prioritized list of user stories, which are short descriptions of the goals the user is trying to accomplish
-7. As the digital service is being built, regularly test it with potential users to ensure it will meet peoples’ needs
+1. Designa un enlace institucional
+2. Designa un administrador de datos abiertos
+3. Envia un oficio con la designación a la Estrategia Digital Nacional,
+   siguiendo [esta plantilla](https://docs.google.com/document/d/1zTDpf0oW9ooxo2v1W5nQv5ZHAeFL0ss5_6fvhzeGG9g/edit?usp=sharing).
+4. Reúne a un Comité Institucional de Datos Abiertos.
 
-#### key questions
-- What user needs will this service address?
-- Why does the user want or need this service?
-- Who are your key users?
-- Which people will have the most difficulty with your service?
-- What research methods were used?
-- What were the key findings from users’ current experience?
-- How were the findings documented? Where can future team members access the documentation?
-- How often are you testing with real people?
