--- a/_plays/02.md
+++ b/_plays/02.md
@@ -1,19 +1,14 @@
 ---
 id: 2
-title: Address the whole experience, from start to finish
+title: Crea un Inventario Institucional de Datos Abiertos
 ---
 
-We must build digital services with an understanding of the range of ways a person might interact with our service, including the actions they take online, through a mobile application, on the phone, or in person. Every encounter should move the user closer towards the desired outcome, whether that encounter is online or offline.
+El inventario general de datos permite a la institución saber con qué activos de datos cuenta, así como explorar áreas de oportunidad para utilizarlos en el cumplimiento de sus objetivos. También permite identificar duplicidades, eficientar recursos y conocer la ubicación de los datos.
+
+Es importante a que se inicie un versionamiento del Inventario de Datos de la entidad. En la primera iteración se debe apuntar a tener un ejercicio exhaustivo, que se irá incrementando y perfeccionando de manera gradual.
 
 #### checklist
-1. Understand the different points at which people will interact with the service – both online and in person
-2. Identify pain points in the current way users interact with the service, and prioritize these according to user needs
-3. Design the digital parts of the service so that they are integrated with the offline touch points people use to interact with the service
-4. Develop metrics that will measure how well the service is meeting user needs, at each step of the service
+1. Pide un inventario general a todas las áreas.
+2. Consolida la información recolectada en un solo inventario, siguiendo
+   [este formato](https://docs.google.com/spreadsheets/d/1NsLrTVkp0mNQ-E-erhtuVJCXcIuOSdWKGpiZU_4CCDg/edit?usp=sharing).
 
-
-#### key questions
-- What are the different ways (both online and offline) that people currently accomplish the task the digital service is designed to help with?
-- Where are user pain points in the current way people accomplish the task?
-- Where does this specific project fit into the larger way people currently obtain the service being offered?
-- What metrics will best indicate how well the service is working for its users?
