--- a/_plays/06.md
+++ b/_plays/06.md
@@ -1,18 +1,16 @@
 ---
 id: 6
-title: Assign one leader and hold that person accountable
+title: Abre datos
 ---
 
-There must be a single product owner who has the authority and responsibility across teams to assign tasks and work elements; make business, product, and technical decisions; and is accountable for the success or failure of the overall service. This product owner is ultimately responsible for how well the service is meeting the needs of its users, which is how a service should be evaluated. The product owner is responsible for ensuring the features are built and managing the feature and bug backlogs.
+Es importante estandarizar la manera en la que serán consumidos los datos. Al exportar en formatos tabulares se facilita el consumo e interpretación de la información por terceros con diferentes sistemas y tecnologías.
+
+Al utilizar formatos abiertos se extiende la audiencia de usuarios que pueden aprovechar estos datos, ya que los formatos abiertos son soportados por cualquier sistema computacional.
+
+Es de relevancia asegurar la validez del archivo exportado, ya que de no ser válido, se interrumpe el uso por terceros.
 
 #### checklist
-1. A product owner has been identified
-2. All stakeholders agree that the product owner has the authority to assign tasks and make decisions about features and technical implementation details
-3. The product owner has a product management background with technical experience to assess alternatives and weigh tradeoffs
-4. The product owner has a work plan that includes budget estimates and identification of funding sources
-5. The product owner has a strong relationship with his or her contracting officer
+1. Exporta datos en archivos estáticos tabulares.
+2. Convierte los archivos a formatos abiertos (CSV).
+3. Asegura la validez del formato y estructura del archivo.
 
-#### key questions
-- Who is the product owner?
-- What organizational changes have been made to ensure the product owner has sufficient authority over and support for the project?
-- What does it take for the product owner to add or remove a feature from the service?
