--- a/_plays/07.md
+++ b/_plays/07.md
@@ -1,16 +1,13 @@
 ---
 id: 7
-title: Bring in experienced teams
+title: Publica los datos en línea
 ---
 
-We need talented people working in government who have experience creating modern digital services. This includes bringing in seasoned product managers, engineers, and designers. When outside help is needed, our teams should work with contracting officers who understand how to evaluate third-party technical competency so our teams can be paired with contractors who are good at both building and delivering effective digital services. The makeup and experience requirements of the team will vary depending on the scope of the project.
+Los conjuntos de datos deben estar a un clic de distancia de los usuarios. Esto quiere decir que se deben evitar cualquier barrera para el acceso, como el uso de contraseñas o interfaces de usuario "interactivas". Debemos considerar que será también software el que consuma estos datos en línea, no sólo humanos.
+
+Cargar los conjuntos de datos abiertos en un servidor web, ya sea el mismo portal en línea con el que se cuente, o servidores de archivos propios o en la nube. Se recomienda cargar los archivos (o hacer referencia) en la sección de datos abiertos en la pestaña de Transparencia Focalizada o en la dirección www.institucion.gob.mx/datos
 
 #### checklist
-1. Member(s) of the team have experience building popular, high-traffic digital services
-2. Member(s) of the team have experience designing mobile and web applications
-3. Member(s) of the team have experience using automated testing frameworks
-4. Member(s) of the team have experience with modern development and operations (DevOps) techniques such as continuous integration and continuous deployment
-5. Member(s) of the team have experience securing digital services
-6. A Federal contracting officer is on the internal team if a third party will be used for development work
-7. A Federal budget officer is on the internal team or is a partner
-8. The appropriate privacy, civil liberties, and/or legal advisor for the department or agency is a partner
+1. Haz disponibles los datos en línea para descarga.
+2. Facilitar la descarga, segmentando y comprimiendo los archivos.
+
