--- a/_plays/08.md
+++ b/_plays/08.md
@@ -1,17 +1,12 @@
 ---
 id: 8
-title: Choose a modern technology stack
+title: Documenta los conjuntos de datos
 ---
 
-The technology decisions we make need to enable development teams to work efficiently and enable services to scale easily and cost-effectively. Our choices for hosting infrastructure, databases, software frameworks, programming languages and the rest of the technology stack should seek to avoid vendor lock-in and match what successful modern consumer and enterprise software companies would choose today. In particular, digital services teams should consider using open source, cloud based, and commodity solutions across the technology stack, as these solutions have seen widespread adoption and support by the most successful private-sector consumer and enterprise software technology companies.
+Utilizar datos no debería ser confuso para el usuario. Es importante explicar de dónde vienen los datos y al menos compartir referencias adicionales para entender más a fondo el origen de éstos.
+
+Todo esto se captura en los metadatos de cada uno de los conjuntos de datos.
 
 #### checklist
-1. Choose software frameworks that are commonly used by private-sector companies creating similar services
-2. To the extent practical, ensure that software can be deployed on a variety of commodity hardware types
-3. Ensure that each project has easy to understand instructions for setting up a local development environment, and that team members can be quickly added or removed from projects
-4. Consider open source software solutions at all layers of the stack
+1. Documentar cada uno de los conjuntos de datos con los metadatos bajo DCAT. Sigue la guía para documentar metadatos usando DCAT disponible en [bit.ly/inventario-de-datos-v2](http://bit.ly/inventario-de-datos-v2). El producto final será un CSV con la documentación de todos los conjuntos de datos a publicar.
 
-#### key questions
-- What is your development stack and why did you choose it?
-- What database(s) are you using and why did you choose them?
-- How long does it take for a new team member to set up a local development environment?
