--- a/_plays/10.md
+++ b/_plays/10.md
@@ -1,26 +1,16 @@
 ---
 id: 10
-title: Automate testing and deployments
+title: Socializa el Plan de Acción
 ---
 
-Today, developers write automated scripts that can verify thousands of scenarios in minutes and then deploy updated code into production environments multiple times per day. They use automated performance tests which simulate surges in traffic to identify performance bottlenecks. While manual tests and quality assurance is still necessary, automated tests provide consistent and reliable protection against unintentional regressions, and make it possible for developers to confidently release frequent updates to the service.
+Los Datos Abiertos es un tema nuevo en la APF. Es importante dar a conocer qué son los datos abiertos y el valor que estos pueden tener para lograr más fácilmente los objetivos prioritarios de la institución y crear valor para la ciudadanía. 
+
+Los datos abiertos que genera la APF puede ser usado, reutilizado y redistribuido por todos los sectores de la sociedad para generar valor. Es importante llevar a cabo acciones de diálogo y socialización con los sectores nteresados de la institución para que sepan los datos abiertos publicados y promover e incentivar que se lleven a cabo proyectos de uso con los mismos.
+
+El diálogo entre los responsables de los conjuntos de datos y los usuarios es fundamental para crear valor y responder a preguntas sobre la conformación y significado de cada conjutno. Datos.gob.mx, tendrá mecanismos de interacción para fomentar este diálogo. 
 
 #### checklist
-1. Create automated tests that verify all user-facing functionality
-2. Create unit and integration tests to verify modules and components
-3. Run tests automatically as part of the build process
-4. Perform deployments automatically with deployment scripts, continuous delivery services, or similar techniques
-5. Conduct load and performance tests at regular intervals, including before public launch
+1. Comunica al interior.
+2. Comunica al exterior.
+3. Responde a tus usuarios.
 
-
-#### key questions
-- What percentage of the code base is covered by automated tests?
-- How long does it take to build, test, and deploy a typical bug fix?
-- How long does it take to build, test, and deploy a new feature into production?
-- How frequently are builds created?
-- What test tools are used?
-- What deployment automation or continuous integration tools are used?
-- What is the estimated maximum number of concurrent users who will want to use the system?
-- How many simultaneous users could the system handle, according to the most recent capacity test?
-- How does the service perform when you exceed the expected target usage volume? Does the service degrade gracefully or catastrophically?
-- What is your scaling strategy when demand increases suddenly?
