--- a/_plays/13.md
+++ b/_plays/13.md
@@ -1,24 +1,14 @@
 ---
 id: 13
-title: Default to open
+title: Promueve casos de éxito
 ---
 
-When we collaborate in the open and publish our data publicly we can improve Government together. By building services more openly and publishing open data, we simplify the public’s access to government services and information, allow the public to easily provide fixes and contributions, and enable reuse by entrepreneurs, nonprofits, other agencies, and the public.
+Hacer que los datos sean abiertos y accesibles en un formato estándar, legible por máquina por defecto puede aumentar la productividad y ahorro de costos de las dependendencias, entidades y empresas productivas del Estado. Al realizar un análisis de costo-beneficio para determinar si y en qué medida a modificar los conjuntos de datos y los sistemas existentes de acuerdo con las recomendaciones de la presente nota, considere que los benefiios son buenas historias que deben de ser comunicadas para reforzar la visibilidad y éxito de su Plan de Apertura.
+
+En [datos.gob.mx](http://datos.gob.mx) se presentarán casos de éxito públicos y cívicos.
 
 #### checklist
-1. Offer users a mechanism to report bugs and issues, and be responsive to these reports
-2. Provide datasets to the public, in their entirety, through bulk downloads and APIs (application programming interfaces)
-3. Ensure that data from the service is explicitly in the public domain, and that rights are waived globally via an international public domain dedication, such as the “Creative Commons Zero” waiver
-4. Catalog data in the agency’s enterprise data inventory and add any public datasets to the agency’s public data listing
-5. Ensure that we maintain the rights to all data developed by third parties in such a manner that is releasable and reusable at no cost to the public
-6. Ensure that we maintain contractual rights to all custom software developed by third parties in such a manner that is publishable and reusable at no cost
-7. When appropriate, create an API for third parties to interact with the service directly
-8. When appropriate, publish source code of projects or components online
-9. When appropriate, share your development process and progress publicly
+1. Promueve casos de éxito que inspiren al uso y aprovechamiento de
+   datos abiertos.
+2. Publica una historia en [datos.gob.mx](http://datos.gob.mx).
 
-#### key questions
-- How are you collecting user feedback for bugs and issues?
-- If there is an API, what capabilities does it provide? Who uses it? How is it documented?
-- If the codebase has not been released under an open source license, explain why.
-- What components are made available to the public as open source?
-- What datasets are made available to the public?
