--- a/_plays/09.md
+++ b/_plays/09.md
@@ -1,30 +1,20 @@
 ---
 id: 9
-title: Deploy in a flexible hosting environment
+title: Publica el catálogo de datos abiertos en datos.gob.mx
 ---
 
-Our services should be deployed on flexible infrastructure, where resources can be provisioned in real time to meet spikes in user demand. Our digital services are crippled when we host them in data centers which market themselves as “cloud hosting” but require us to manage and maintain hardware directly. This outdated practice wastes time, weakens our disaster recovery plans, and results in significantly higher costs.
+El catálogo generado en el paso anterior se cargará en
+[ADELA](http://adela.datos.gob.mx) para ser publicado en
+[datos.gob.mx](http://datos.gob.mx).
+
+[ADELA](http://adela.datos.gob.mx) tiene dos funciones básicas, facilitar el proceso de apertura de datos y transparentar su seguimiento.
+
+Al cargar el catálogo de datos de la institución en formato CSV, se traducirá automáticamente al estándar DCAT en formato JSON. Además se registrará un histórico de catálogos, y se proveerá de ayuda y guía a los funcionarios responsables.
+
+Las mejores prácticas de la comunidad internacional de datos abiertos, apuntan a que un catálogo central de datos abiertos es la mejor opción para los ciudadanos. En [datos.gob.mx](http://datos.gob.mx) concentramos una gran variedad de conjuntos de datos de diferentes dependencias, entidades y gobiernos locales para facilitar la búsqueda y uso al ciudadano. Al publicar en [datos.gob.mx](http://datos.gob.mx) tu institución se suma a una iniciativa nacional.
 
 #### checklist
-1. Resources are provisioned on demand
-2. Resources scale based on real-time user demand
-3. Resources are provisioned through an API
-4. Resources are available in multiple regions
-5. We pay only for the resources we use
-6. Static assets are served through a content delivery network
-7. Application is hosted on commodity hardware
+1. Pide acceso en [ADELA](http://adela.datos.gob.mx). 
+2. Sube el catálogo de datos.
+3. Revisa que el catálogo esté reflejado en [datos.gob.mx](http://datos.gob.mx).
 
-#### key questions
--	Where is your service hosted?
--	What hardware does your service use to run?
--	What is the demand / usage pattern for your service?
--	What happens to your service when it experiences a surge in traffic or load?
--	How much capacity is available in your hosting environment?
--	How long does it take you to provision a new resource such as an application server?
--	How have you designed your service to scale based on demand?
--	How are you paying for your hosting infrastructure — i.e., by the minute, hourly, daily, monthly, fixed?
--	Is your service hosted in multiple regions / availability zones / data centers?
--	In the event of a catastrophic disaster to a datacenter, how long will it take to have the service operational?
--	What would be the impact of a prolonged downtime window?
--	What data redundancy do you have built into the system, and what would be the impact of a catastrophic data loss?
--	How often do you need to contact a person from your hosting provider to get resources or to fix an issue?
