--- a/_plays/11.md
+++ b/_plays/11.md
@@ -1,24 +1,17 @@
 ---
 id: 11
-title: Manage security and privacy through reusable processes
+title: Aprovecha las herramientas abiertas
 ---
 
-It is critical that our digital services protect sensitive information and keep systems secure. This is typically a process of continuous review and improvement which should be built into the development and maintenance of the service. At the start of designing a new service or feature, the team lead should engage the appropriate privacy, security, and legal officer(s) to discuss the type of information collected, how it should be secured, and how it may be used and shared. The sustained engagement of a privacy specialist helps ensure that personal data is properly managed. In addition, a key process to building a secure service is comprehensively testing and certifying the components in each layer of the technology stack for security vulnerabilities, and then to re-use these same pre-certified components for multiple services.
+La iniciativa de Datos Abiertos busca fomentar la interoperabilidad, escalabilidad y réplica de las herramientas de uso de datos abiertos, como mapas y gráficas estadísticas. El uso de las herramientas genéricas para la APF y el público, nos permitirá ahorrar recursos y fomentar desarrollos tecnológicos una sóla vez, y para toda la APF.
 
-The following checklist provides a starting point, but teams should work closely with their privacy specialist and security engineer to meet the needs of the specific service.
+Usar las herramientas en código abierto disponibles en datos.gob.mx. Esta plataforma será actualizada constantemente y con nuevas herramientas como:
+
+* visualizador cartográfico universal
+* presupuesto abierto
+* visualizaciones interactivas
 
 #### checklist
-1. Contact the appropriate privacy or legal officer of the department or agency to determine whether a System of Records Notice (SORN), Privacy Impact Assessment, or other review should be conducted
-2. Determine, in consultation with a records officer, what data is collected and why, how it is used or shared, how it is stored and secured, and how long it is kept
-3. Determine, in consultation with a privacy specialist, whether and how users are notified about how personal information is collected and used, including whether a privacy policy is needed and where it should appear, and how users will be notified in the event of a security breach
-4. Consider whether the user should be able to access, delete, or remove their information from the service
-5. “Pre-certify” the hosting infrastructure used for the project using FedRAMP
-6. Use deployment scripts to ensure configuration of production environment remains consistent and controllable
+1. Utiliza las herramientas para promocionar el uso y aprovechamiento de
+   tu catálogo de datos abiertos.
 
-#### key questions
-- Does the service collect personal information from the user (whether government or public)?  How is the user notified of this collection?
-- Does it collect more information than is needed to perform the requested task? Are there uses of the data that would not be expected by the average user?
-- How does a user contact a responsible person to seek access, correction, deletion, or removal of his or her personal information?
-- Will information stored in the system be shared with others?
-- How and how often is the service tested for security vulnerabilities?
-- How can someone from the public report a security issue?
