--- a/_plays/01.md
+++ b/_plays/01.md
@@ -5,7 +5,7 @@ title: Understand what people need
 
 We must begin digital projects by exploring and pinpointing the needs of the people who will use the service, and the ways the service will fit into their lives. Whether the users are members of the public or government employees, policy makers must include real people in their design process from the beginning. The needs of people — not constraints of government structures or silos — should inform technical and design decisions. We need to continually test the products we build with real people to keep us honest about what is important.
 
-#### checklist
+#### Checklist
 1. Early in the project, spend time with current and prospective users of the service
 2. Use a range of qualitative and quantitative research methods to determine people’s goals, needs, and behaviors; be thoughtful about the time spent
 3. Test prototypes of solutions with real people, in the field if possible
@@ -14,7 +14,7 @@ We must begin digital projects by exploring and pinpointing the needs of the peo
 6. Create a prioritized list of tasks the user is trying to accomplish, also known as "user stories"
 7. As the digital service is being built, regularly test it with potential users to ensure it meets people’s needs
 
-#### key questions
+#### Key Questions
 - Who are your primary users?
 - What user needs will this service address?
 - Why does the user want or need this service?
