--- a/_plays/05.md
+++ b/_plays/05.md
@@ -7,7 +7,7 @@ To improve our chances of success when contracting out development work, we need
 
 [The TechFAR Handbook](https://playbook.cio.gov/techfar/) provides a detailed explanation of the flexibilities in the Federal Acquisition Regulation (FAR) that can help agencies implement this play.
 
-#### checklist
+#### Checklist
 1. Budget includes research, discovery, and prototyping activities
 2. Contract is structured to request frequent deliverables, not multi-month milestones
 3. Contract is structured to hold vendors accountable to deliverables
@@ -18,7 +18,7 @@ To improve our chances of success when contracting out development work, we need
 8. Contract specifies a warranty period where defects uncovered by the public are addressed by the vendor at no additional cost to the government
 9. Contract includes a transition of services period and transition-out plan
 
-#### key questions
+#### Key Questions
 - What is the scope of the project? What are the key deliverables?
 - What are the milestones? How frequent are they?
 - What are the performance metrics defined in the contract (e.g., response time, system uptime, time period to address priority issues)?
