--- a/_plays/09.md
+++ b/_plays/09.md
@@ -5,7 +5,7 @@ title: Deploy in a flexible hosting environment
 
 Our services should be deployed on flexible infrastructure, where resources can be provisioned in real-time to meet spikes traffic and user demand. Our digital services are crippled when we host them in data centers that market themselves as “cloud hosting” but require us to manage and maintain hardware directly. This outdated practice wastes time, weakens our disaster recovery plans, and results in significantly higher costs.
 
-#### checklist
+#### Checklist
 1. Resources are provisioned on demand
 2. Resources scale based on real-time user demand
 3. Resources are provisioned through an API
@@ -14,7 +14,7 @@ Our services should be deployed on flexible infrastructure, where resources can 
 6. Static assets are served through a content delivery network
 7. Application is hosted on commodity hardware
 
-#### key questions
+#### Key Questions
 -	Where is your service hosted?
 -	What hardware does your service use to run?
 -	What is the demand or usage pattern for your service?
