--- a/_plays/10.md
+++ b/_plays/10.md
@@ -5,7 +5,7 @@ title: Automate testing and deployments
 
 Today, developers write automated scripts that can verify thousands of scenarios in minutes and then deploy updated code into production environments multiple times a day. They use automated performance tests which simulate surges in traffic to identify performance bottlenecks. While manual tests and quality assurance are still necessary, automated tests provide consistent and reliable protection against unintentional regressions, and make it possible for developers to confidently release frequent updates to the service.
 
-#### checklist
+#### Checklist
 1. Create automated tests that verify all user-facing functionality
 2. Create unit and integration tests to verify modules and components
 3. Run tests automatically as part of the build process
@@ -13,7 +13,7 @@ Today, developers write automated scripts that can verify thousands of scenarios
 5. Conduct load and performance tests at regular intervals, including before public launch
 
 
-#### key questions
+#### Key Questions
 - What percentage of the code base is covered by automated tests?
 - How long does it take to build, test, and deploy a typical bug fix?
 - How long does it take to build, test, and deploy a new feature into production?
