--- a/_plays/11.md
+++ b/_plays/11.md
@@ -7,7 +7,7 @@ Our digital services have to protect sensitive information and keep systems secu
 
 The following checklist provides a starting point, but teams should work closely with their privacy specialist and security engineer to meet the needs of the specific service.
 
-#### checklist
+### checklist
 1. Contact the appropriate privacy or legal officer of the department or agency to determine whether a System of Records Notice (SORN), Privacy Impact Assessment, or other review should be conducted
 2. Determine, in consultation with a records officer, what data is collected and why, how it is used or shared, how it is stored and secured, and how long it is kept
 3. Determine, in consultation with a privacy specialist, whether and how users are notified about how personal information is collected and used, including whether a privacy policy is needed and where it should appear, and how users will be notified in the event of a security breach
@@ -15,7 +15,7 @@ The following checklist provides a starting point, but teams should work closely
 5. “Pre-certify” the hosting infrastructure used for the project using FedRAMP
 6. Use deployment scripts to ensure configuration of production environment remains consistent and controllable
 
-#### key questions
+### key questions
 - Does the service collect personal information from the user?  How is the user notified of this collection?
 - Does it collect more information than necessary? Could the data be used in ways an average user wouldn't expect?
 - How does a user access, correct, delete, or remove personal information?
