--- a/_plays/12.md
+++ b/_plays/12.md
@@ -5,7 +5,7 @@ title: Use data to drive decisions
 
 At every stage of a project, we should measure how well our service is working for our users. This includes measuring how well a system performs and how people are interacting with it in real-time. Our teams and agency leadership should carefully watch these metrics to find issues and identify which bug fixes and improvements should be prioritized. Along with monitoring tools, a feedback mechanism should be in place for people to report issues directly.
 
-#### checklist
+### checklist
 1. Monitor system-level resource utilization in real time
 2. Monitor system performance in real-time (e.g. response time, latency, throughput, and error rates)
 3. Ensure monitoring can measure median, 95th percentile, and 98th percentile performance
@@ -16,7 +16,7 @@ At every stage of a project, we should measure how well our service is working f
 8. Use an experimentation tool that supports multivariate testing in production
 
 
-#### key questions
+### key questions
 - What are the key metrics for the service?
 - How have these metrics performed over the life of the service?
 - Which system monitoring tools are in place?
