Fix grammar issue

--- a/_plays/03.md
+++ b/_plays/03.md
@@ -15,7 +15,7 @@ Using a government service shouldnâ€™t be stressful, confusing, or daunting. Itâ
 7. Use language and design consistently throughout the service, including online and offline touch points
 
 ### Key Questions
-- What primary tasks are the user trying to accomplish?
+- What primary tasks is the user trying to accomplish?
 - Is the language as plain and universal as possible?
 - What languages is your service offered in?
 - If a user needs help while using the service, how do they go about getting it?
