--- a/_plays/08.md
+++ b/_plays/08.md
@@ -14,4 +14,4 @@ The technology decisions we make need to enable development teams to work effici
 ### Key Questions
 - What is your development stack and why did you choose it?
 - Which databases are you using and why did you choose them?
-- How long does it take for a new team member to start developing?
+- How long does it take for a new team member to start contributing?
