--- a/_plays/01.md
+++ b/_plays/01.md
@@ -3,23 +3,34 @@ id: 1
 title: Understand what people need
 ---
 
-We must begin digital projects by exploring and pinpointing the needs of the people who will use the service, and the ways the service will fit into their lives. Whether the users are members of the public or government employees, policy makers must include real people in their design process from the beginning. The needs of people — not constraints of government structures or silos — should inform technical and design decisions. We need to continually test the products we build with real people to keep us honest about what is important.
+We must begin Information Sharing and Safeguarding (IS&S) Environment projects by exploring and pinpointing the needs of the people who will use the service, and the ways the IS&S Environment will allow them to fulfill their missions. Policy makers must include users in their design process from the beginning. The needs of people and their organizational missions — not constraints of government processes or legacy systems — should inform technical and design decisions. We need to continually test the products we build with real people – the actual business process owners – to ensure the product is kept current and remains useful.
 
 ### Checklist
-1. Early in the project, spend time with current and prospective users of the service
-2. Use a range of qualitative and quantitative research methods to determine people’s goals, needs, and behaviors; be thoughtful about the time spent
-3. Test prototypes of solutions with real people, in the field if possible
-4. Document the findings about user goals, needs, behaviors, and preferences
-5. Share findings with the team and agency leadership
-6. Create a prioritized list of tasks the user is trying to accomplish, also known as "user stories"
-7. As the digital service is being built, regularly test it with potential users to ensure it meets people’s needs
+1. Early in the project, spend time with current and prospective users of the capabilities and services in the IS&S Environment and understand their organizational missions and areas where the missions intersect.
+2. Use a range of qualitative and quantitative research methods to determine people’s goals, needs, and behaviors; be thoughtful about the time spent.
+3. Develop processes to identify and resolve conflicts within stakeholder community regarding needs.
+4. Identify the cultural impediments that are keeping stakeholders from implementing the IS&S Environment.
+5. Test prototypes of solutions with real people, in the field if possible.
+6. Document the findings about user goals, needs, behaviors, and preferences.
+7. Share findings with the team, the stakeholders, and agency leadership.
+8. Create a prioritized list of tasks the user is trying to accomplish, also known as user stories.
+9. Regularly test with potential users to ensure the IS&S Environment is meeting people’s needs.
+10. At every design review, before the next iteration, prioritize the work – be prepared to persist or pivot.
 
 ### Key Questions
 - Who are your primary users?
-- What user needs will this service address?
-- Why does the user want or need this service?
-- Which people will have the most difficulty with the service?
-- Which research methods were used?
-- What were the key findings?
-- How were the findings documented? Where can future team members access the documentation?
-- How often are you testing with real people?
+- Does the product/service already exist, and can it be leveraged for this effort?
+- Is the service that is being developed meeting the customer’s needs?
+- What user needs will the IS&S Environment address? Is there general agreement on the user needs? If not, which ones are the most important to the mission?
+- Why does the user want or need this service? Is there a common need among potential users?
+- Which people will have the most difficulty with the service? How can that be overcome?
+- Which research methods were used to understand user needs?
+- What were the key findings of the research and any prototype testing?
+- What are the privacy and safeguarding implications in meeting user expectations of service?
+
+### Play Resources
+The following resources can help you with this play:
+
+- Pre-RFP Toolkit (v3-2013), IJIS Institute, [**http://www.ijis.org/?page=PreRFP_Toolkit**](http://www.ijis.org/?page=PreRFP_Toolkit "Link to PreRFP Toolkit")
+- American Probation and Parole Association (APPA) Community Corrections Automated Case Management Procurement Guide with Bid Specifications, Matz, A. K. (2012), APPA and Council of State Governments, [**https://www.appa-net.org/eweb/docs/APPA/pubs/Procurement-Guide.pdf**](https://www.appa-net.org/eweb/docs/APPA/pubs/Procurement-Guide.pdf "Link to APPA") 
+
