--- a/_plays/02.md
+++ b/_plays/02.md
@@ -1,19 +1,39 @@
 ---
 id: 2
-title: Address the whole experience, from start to finish
+title: Gather the Stakeholders
 ---
 
-We need to understand the different ways people will interact with our services, including the actions they take online, through a mobile application, on a phone, or in person. Every encounter — whether it's online or offline — should move the user closer towards their goal.
+Putting in place a governance process where all stakeholders believe they are represented in the making of policy decisions is the fastest way to get complete acceptance and support for an IS&S Environment. A governance body can be created by executive order, legislative action, or by a consensus of leadership from sponsors or leading actors in the IS&S Environment. Essential to success is the formal assignment of responsibility to the individuals who are selected to represent the participating organizations. Governance bodies need a charter to define both the boundaries of their responsibility and authority and the processes for making decisions that affect all participants. Such a body is essential during early policy discussions on issues such as privacy, selection of standards, responsibilities for implementation, and other critical decisions shaping the IS&S Environment. The governance body will remain in place and active for the duration of the IS&S Environment lifecycle.
 
 ### Checklist
-1. Understand the different points at which people will interact with the service – both online and in person
-2. Identify pain points in the current way users interact with the service, and prioritize these according to user needs
-3. Design the digital parts of the service so that they are integrated with the offline touch points people use to interact with the service
-4. Develop metrics that will measure how well the service is meeting user needs at each step of the service
+1. The governance body must include representatives of all stakeholder organizations that are impacted by the development of an IS&S Environment. 
+2. The members assigned to the governance body should be formally appointed to serve by their agency’s executive.
+3. The governance body must be empowered to make the important decisions that will shape the IS&S Environment.
+4. All meetings should be issue-driven and documented.
+5. Transparency of the governance body deliberations is essential.
+6. The governance body must be supplied with adequate staff support to get things done.
+7. Governance works best when the governance body develops its own charter and other organizational documents.
+8. Work leading to policy decisions can be delegated to operational committees to expedite decision making.
 
 
 ### Key Questions
-- What are the different ways (both online and offline) that people currently accomplish the task the digital service is designed to help with?
-- Where are user pain points in the current way people accomplish the task?
-- Where does this specific project fit into the larger way people currently obtain the service being offered?
-- What metrics will best indicate how well the service is working for its users?
+- Who are the stakeholders and who represents them in the governance process?
+- Do the stakeholders believe they are represented in the governance process?
+- Have leadership roles/responsibilities been established?
+- Have boundaries of authority been defined?
+- What is the governance plan for the long term?
+- Is the decision-making process well understood and documented?
+- Is there a communications plan to explain the governance process to interested external parties?
+- Do committees understand their responsibilities and deliverables?
+- What policy implications need to be addressed?
+
+### Play Resources
+The following resources can help you with this play:
+
+- Illinois Framework for Healthcare and Human Resources Interoperability and Governance Resources, http://illinoisframework.org/illinois-framework-resource-library
+- The Good Governance Standard for Public Services (2004), The Independent Commission on Good Governance in Public Services, http://illinoisframework.org/pdf/Good_Governance_Standards_for_Public_Services.pdf
+- Governance Documentation: Article, Bylaws, and Policies (2012), BoardSource, http://illinoisframework.org/pdf/BoardSource_Governance_Documentation.pdf
+- Governance Guidance for Horizontal Integration of Health and Human Services (2012), American Public Human Services Association, http://illinoisframework.org/pdf/APHSA_Governance_Guidance.pdf
+- Governance Structures in Cross-boundary Information Sharing: Lessons from State and Local Criminal Justice Initiatives (2012), Theresa A. Pardo, J. Ramon Gil-Garcia, and G. Brian Burke Center for Technology in Government, University at Albany, SUNY, http://illinoisframework.org/pdf/Governance_Structures_in_Cross_Boundary_Information_Sharing.pdf
+- Information Sharing Environment Common Profile Framework Description,http://project-interoperability.github.io/common-profile/
+- Governance Agreements for Information Sharing Projects
