--- a/_plays/02.md
+++ b/_plays/02.md
@@ -1,6 +1,6 @@
 ---
 id: 2
-title: Gather the Stakeholders
+title: Gather the stakeholders
 ---
 
 Putting in place a governance process where all stakeholders believe they are represented in the making of policy decisions is the fastest way to get complete acceptance and support for an IS&S Environment. A governance body can be created by executive order, legislative action, or by a consensus of leadership from sponsors or leading actors in the IS&S Environment. Essential to success is the formal assignment of responsibility to the individuals who are selected to represent the participating organizations. Governance bodies need a charter to define both the boundaries of their responsibility and authority and the processes for making decisions that affect all participants. Such a body is essential during early policy discussions on issues such as privacy, selection of standards, responsibilities for implementation, and other critical decisions shaping the IS&S Environment. The governance body will remain in place and active for the duration of the IS&S Environment lifecycle.
